--- a/app.yaml
+++ b/app.yaml
@@ -1,12 +1,27 @@
-application: eloquent-ratio-109701
+application: mealsloth-chimera-ap01
 version: 1
 runtime: python27
 api_version: 1
 threadsafe: true
 
+
+skip_files:
+- ^(.*/)?.*\.pyc$
+- ^(.*/)?.*\.less$
+- ^(.*/)?.*\.DS_Store$
+- ^(.*/)?.*\.csslintrc$
+
+
 handlers:
+- url: /favicon\.ico
+  static_files: static/images/favicon.ico
+  upload: static/images/favicon\.ico
+- url: /static
+  static_dir: static
+  application_readable: true
 - url: /.*
   script: main.app
+
 
 libraries:
 - name: django
