Accommodating Hydra URL format change

--- a/cron.yaml
+++ b/cron.yaml
@@ -1,7 +1,7 @@
 cron:
 - description: post status updates
-  url: /job/post/status
+  url: /job/post/status/
   schedule: every 30 minutes
 - description: order status updates
-  url: /job/order/status
+  url: /job/order/status/
   schedule: every 30 minutes
