--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "Chimera"]
 	path = Chimera
-	url = https://MealSloth@mealsloth.git.cloudforge.com/applicationchimera.git
+	url = https://github.com/mealsloth/applicationchimera.git
